welcome.lessons.welcome.methods.basics.Methods.scala.code
def goAndGet() {
	avance()
	prendBiscuit()
	gauche()
	recule()
	deposeBiscuit()
	droite()
}
